@@ -1,5 +1,8 @@
 package com.jie.datastrcutres.linklist.circle.single;
 
+import java.util.ArrayList;
+import java.util.List;
+
 /**
  * <p>
  * Title: 约瑟夫问题
@@ -15,16 +18,32 @@ package com.jie.datastrcutres.linklist.circle.single;
 public class JosePfuProblems {
 
     public static void main(String[] args) {
-        CircleSingleLinkList<Integer> children = new CircleSingleLinkList<>();
-        for (int i = 1; i < 6; i++) {
+        /*CircleSingleLinkList<Integer> children = new CircleSingleLinkList<>();
+        for (int i = 1; i < 11; i++) {
             children.add(i);
         }
-        System.out.println(children);
-        children.update(100,4);
-        System.out.println(children);
-        children.delete(2);
-        System.out.println(children);
-        System.out.println(children.get(0));
+        int countNum = 3;
+        int currentCount = 1;
+        List<Node<Integer>> result = new ArrayList<>();
+        Node<Integer> cursorLeft = children.get(children.getSize()-1);
+        Node<Integer> cursorRight = children.getFirst();
+        while (!children.isEmpty()){
+            if (currentCount!=countNum){
+                cursorLeft = cursorLeft.getNext();
+                cursorRight = cursorRight.getNext();
+                currentCount++;
+                continue;
+            }
+            cursorLeft.setNext(cursorRight.getNext());
+            children.setSize(children.getSize()-1);
+            result.add(cursorRight);
+            if (children.getSize() ==0){
+                children.clear();
+            }
+            cursorRight = cursorRight.getNext();
+            currentCount = 1;
+        }
+        System.out.println(result);*/
     }
 
 }
